--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
   padding: 0;
   box-sizing: none;
   background-color: var(--background-color);
+  font-family: ' Montserrat-Alt1 ', sans-serif;
 }
 
 
