--- a/form.css
+++ b/form.css
@@ -10,19 +10,15 @@
   
   * {
     box-sizing: border-box;
+    list-style: none;
   }
   
-  @font-face {
-    font-family: theOffice;
-    src: url('../fonts/american_typewritter_reg.ttf');
-  }
   
   body {
     margin: 0;
     min-height: 100vh;
     background-color: var(--primary);
     border: 0.2vw solid var(--secondary);
-    font-family: theOffice;
   }
   
   header {
@@ -35,11 +31,11 @@
   }
   
   header img {
-    width: 170px;
+    width: 65%;
   }
   
   main {
-    max-width: 1000px;
+    max-width: 1000 px;
     margin: auto;
   }
   
@@ -59,7 +55,7 @@
     margin-top: 40px;
     padding: 20px;
     box-shadow: 5px 5px 15px -5px rgb(69, 69, 69);
-    color: black;
+    color: #000000;
   }
   
   main form {
@@ -79,15 +75,16 @@
   
   main form input,
   main form textarea {
-    padding: 4px;
-    width: 50%;
-    border-radius: 4px;
+    padding: 0.5rem;
+    width: 83%;
+    border-radius: 0.5rem;
   }
   
   main form button {
     font-size: large;
-    padding: 8px;
+    padding: 1rem;
   }
+
   
   main form button img {
     margin-bottom: -5px;
@@ -96,7 +93,7 @@
   
   .summary {
     width: 75%;
-    display: flex;
+   
     flex-direction: row-reverse;
     justify-content: space-between;
   }
@@ -109,6 +106,10 @@
   
   .summary p img {
     max-width: 200px;
+  }
+
+  .form-message {
+    height: 100px;
   }
   
   .errorPanel {
@@ -135,3 +136,7 @@
   button:hover {
     background-color: #e6d6c5;
   }
+
+  @media(min-width: 768px) {
+    
+  } 
