--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ nav {
   font-family: var(--font-family-nav);
   position: fixed;
   width: 100%;
-  padding-top: 0%;
+ top: 0;
 }
 
 nav ul {
@@ -217,11 +217,6 @@ a:visited {
   }
 
 
-
-  a:hover {
-    color: #efd5b9;
-  }
-
   .home-txt {
     display: flex;
     justify-content: center;
@@ -251,6 +246,7 @@ a:visited {
     justify-content: space-between;
     align-items: center;
     font-size: calc(0.5rem + 1.5vw);
+    top: 0;
   }
 
   nav ul {
@@ -267,17 +263,15 @@ a:visited {
     cursor: pointer;
     display: none;
   }
-  @media (min-width: 768px) {
-    .slide img {
-        max-width: 800px; /* ou toute autre valeur que vous jugez appropriée */
-        margin: 0 auto; /* pour centrer l'image */
-    }
+  .slide img {
+    max-width: 800px; /* ou toute autre valeur que vous jugez appropriée */
+    margin: 0 auto; /* pour centrer l'image */
 }
 
   #home>img {
-    width: 100%;
+    width: 50%;
     height: auto;
-    margin-top: 15%;
+    margin-top: 10%;
   }
 
 }
