--- a/galerie.css
+++ b/galerie.css
@@ -1,26 +1,31 @@
-/* Css de la page best sellers meme chose que pour le HTML on verra */
+/* Css de la page best sellers*/
 
 
 * {
     margin: 0;
-    padding: 0;
+    padding: 0.5rem;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    color: #DE9C52;
+    color: #D9D1B9;
     text-align: center;
-    background-color: black;
+    background-color: #1D1D1D;
     font-family: "Montserrat-Alt1 Thin", Verdana, Geneva, Tahoma, sans-serif;
 }
 
-h4 {
-    padding: 0.3rem;
+h1 {
+    margin-top: 4rem;
+    font-size: 6rem;
     
 }
 
-h3 {
+h2 {
+    padding: 0.2rem;
+    font-size: 3.5rem;
+}
 
-    font-size: 6rem;
+.verso>h3 {
+    padding-top: 1.5rem;
 }
 
 img {
@@ -31,6 +36,7 @@ img {
 .cards-container {
     margin-top: 8rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 
 }
@@ -47,8 +53,8 @@ img {
 }
 
 .recto {
-    border: solid 2px #DE9C52;
-    border-radius: 15px;
+    border: solid 2px #C1B596;
+    border-radius: 8px;
     height: 100%;
     backface-visibility: hidden;
     transition: 2s;
@@ -58,8 +64,8 @@ img {
     position: absolute;
     top: 0;
     left: 0;
-    border: solid 2px #DE9C52;
-    border-radius: 15px;
+    border: solid 2px #C1B596;
+    border-radius: 8px;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
@@ -85,10 +91,8 @@ img {
     .cards-container {
         align-items: center;
         flex-direction: column;
+        flex-wrap: nowrap;
 
     }
 
 }
-
-
-
